# msu_cse335

football-game/: CMakeLists.txt  GameApp.cpp  GameApp.h  README.md  main.cpp  pch.h
football-game/GameLib/: Background.cpp  Background.h  CMakeLists.txt  CollisionVisitor.cpp  CollisionVisitor.h  Enemy.cpp  Enemy.h  FloatingText.cpp  FloatingText.h  Football.cpp  Football.h  Game.cpp  Game.h  GameView.cpp  GameView.h  GoalPost.cpp  GoalPost.h  Item.cpp  Item.h  ItemCoin10.cpp  ItemCoin10.h  ItemCoin100.cpp  ItemCoin100.h  MainFrame.cpp  MainFrame.h  MovingPlatform.cpp  MovingPlatform.h  Platform.cpp  Platform.h  PowerUp.cpp  PowerUp.h  Scoreboard.cpp  Scoreboard.h  Wall.cpp  Wall.h  ids.h  pch.h
football-game/Tests/: CMakeLists.txt  FootballTest.cpp  ItemTest.cpp  LoadingTest.cpp  ScoreboardTest.cpp
football-game/levels/: level0.xml  level1.xml  level2.xml  level3.xml
south-park_animation-interpolator/: CanadianExperienceApp.cpp  README.md
south-park_animation-interpolator/CanadianExperienceLib/: Actor.cpp  Actor.h  AnimChannel.cpp  AnimChannel.h  AnimChannelAngle.cpp  AnimChannelAngle.h  AnimChannelPoint.cpp  AnimChannelPoint.h  CMakeLists.txt  Drawable.cpp  Drawable.h  HaroldFactory.cpp  HaroldFactory.h  HeadTop.cpp  HeadTop.h  ImageDrawable.cpp  ImageDrawable.h  JoeFactory.cpp  JoeFactory.h  MainFrame.cpp  MainFrame.h  Picture.cpp  Picture.h  PictureFactory.cpp  PictureFactory.h  PictureObserver.cpp  PictureObserver.h  PolyDrawable.cpp  PolyDrawable.h  Timeline.cpp  Timeline.h  TimelingDlg.cpp  TimelingDlg.h  ViewEdit.cpp  ViewEdit.h  ViewTimeline.cpp  (+1 more)
(+183 files in other folders)
